2005-11-25  Ulrich Drepper  <drepper@redhat.com>

	* Makeconfig (+cflags): Add -fmerge-all-constants by default.

	[BZ #1912]
	* nss/function.def: Add entry to use gethostbyname2 for files.

2005-11-25  Thorsten Kukuk  <kukuk@suse.de>

	* sysdeps/unix/sysv/linux/fxstatat64.c: Include string.h.

2005-11-25  Ulrich Drepper  <drepper@redhat.com>

	[BZ #1926]
	* nss/nss_files/files-netgrp.c (_nss_files_endnetgrent): Change
	return value type to match expected type.

	[BZ #1925]
	* nis/ypclnt.c (yp_order): Correct test for invalid parameter.

2005-11-24  Ulrich Drepper  <drepper@redhat.com>

	* scripts/check-c++-types.sh: Improve comments.

	* scripts/check-local-headers.sh: New file.
	* Makefile (tests): Run check-local-headers.sh.

2005-11-23  Thorsten Kukuk  <kukuk@suse.de>

	* include/sys/sendfile.h: New file.

2005-11-24  Andreas Schwab  <schwab@suse.de>

	* time/sys/time.h: Remove nonnull attribute from futimesat.

2005-11-22  Ulrich Drepper  <drepper@redhat.com>

	* nscd/connections.c (sendfileall): Define.
	(handle_request): Use it instead of sendfile call.
	* nscd/nscd-client.h: Declare sendfileall.
	* nscd/aicache.c: Use sendfileall instead of sendfile.
	* nscd/grpcache.c: Likewise.
	* nscd/hstcache.c: Likewise.
	* nscd/initgrcache.c: Likewise.
	* nscd/pwdcache.c: Likewise.

	[BZ #1908]
	* manual/install.texi (Tools for Compilation): Require gawk.

2005-11-22  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/generic/ldsodefs.h (struct rtld_global): Remove
	unused is_static field from slotinfo array.

2005-11-21  Jakub Jelinek  <jakub@redhat.com>

	* sunrpc/bindrsvprt.c (bindresvport): Wrap around to startport
	in the loop if port is bigger than endport, initially set to
	ENDPORT.  When changing startport, set endport and port
	appropriately.

2005-11-21  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.in: Remove RCS ID line.
	* config-name.in: Likewise.
	* config.make.in: Likewise.
	* malloc/arena.c: Likewise.
	* malloc/hooks.c: Likewise.