@@ -1,3 +1,11 @@
+2005-11-25  Richard Henderson  <rth@redhat.com>
+
+	* sysdeps/unix/sysv/linux/alpha/fxstatat.c (__fxstatat): Fix typo.
+	(__fxstatat64): Alias from __fxstatat; remove other cnp errors.
+	* sysdeps/unix/sysv/linux/alpha/sigaction.c: Include sys/cdefs.h
+	and stddef.h.
+	* sysdeps/unix/sysv/linux/alpha/bits/mman.h (MREMAP_FIXED): Define.
+
 2005-11-25  Ulrich Drepper  <drepper@redhat.com>
 
 	* Makeconfig (+cflags): Add -fmerge-all-constants by default.
